LOG Updated to 1.0.5 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "DateTime-Format-RFC3339-v1.0.4.tar.gz": 2d0d2cb24f73d14243e39c112206d2025f891fdf
+  DateTime-Format-RFC3339-v1.0.5.tar.gz: 596e7bd12af447bed28bd5c63bb8790fdd0b7f39
